--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 body{
 background-color: rgba(0, 153, 255, 0.747);
 color: rgb(0, 0, 0);
+background-image:url(-img/79ec0efae164833b0ed42d7132aef46e-spring-sunglasses-icon.webp);
 
-
-}
+}   
 p{
     text-align: justify;
 
