--- a/style.css
+++ b/style.css
@@ -2,89 +2,89 @@
 
 
 body{
-background-color: rgba(10, 255, 235, 0.616);
-color: rgb(0, 0, 0);
-background-image:url(-img/79ec0efae164833b0ed42d7132aef46e-spring-sunglasses-icon.webp);
-
-}   
-div#interface{
-    width: 900px;
-    background-color: white;
-    margin: -20px auto 0px auto;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    padding: 10px 10px 10px 10px;
-}
-p{
-    text-align: justify;
-
-}
-header#cabecalho img#icone{
-
-position: absolute;
-left: 960px;
-top: 50px;
-
-}
-header#cabecalho{
-
-}
-
-figure.img-legenda{
-    position: relative;
-    border: 5px solid rgb(102, 102, 102);
-    box-shadow: 1px 1px 15px black;
-    width: 49%;
-height: 100%;
-
- 
-}
-figure.img-legenda img {
-   width: 99%;
-   height: 100%;
-}
-figure.img-legenda figcaption{
-    opacity: 0;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    background-image:url(-img/79ec0efae164833b0ed42d7132aef46e-spring-sunglasses-icon.webp);
+    
+    }   
+    div#interface{
+        width: 900px;
+        background-color: rgba(255, 255, 255, 0.781);
+        margin: -20px auto 0px auto;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        padding: 10px 10px 10px 10px;
+    }
+    p{
+        text-align: justify;
+    
+    }
+    header#cabecalho img#icone{
+    
     position: absolute;
-        top: 0px;
-        background-color: rgba(0, 0, 0, 0.253);
-        color: rgb(255, 255, 255);
-        width: 100%;
-        height: 100%;
+    left: 960px;
+    top: 50px;
+    
+    }
+    header#cabecalho{
+    
+    }
+    
+    figure.img-legenda{
+        position: relative;
+        border: 5px solid rgb(102, 102, 102);
+        box-shadow: 1px 1px 15px black;
+        width: 49%;
+    height: 100%;
+    
+     
+    }
+    figure.img-legenda img {
+       width: 99%;
+       height: 100%;
+    }
+    figure.img-legenda figcaption{
+        opacity: 0;
+        position: absolute;
+            top: 0px;
+            background-color: rgba(0, 0, 0, 0.253);
+            color: rgb(255, 255, 255);
+            width: 100%;
+            height: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+         transition: opacity 1s;
+    }
+    figure.img-legenda:hover figcaption{
+        opacity: 1;
+        cursor: pointer;
+    }
+    nav#Menu{
+    display: block;
+    }
+    nav#Menu ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -10px;
+    left: 700px;
+    }
+    nav#Menu li{
+        display: inline-block;
+        background-color: #dddddd;
         padding: 10px;
-        box-sizing: border-box;
-     transition: opacity 1s;
-}
-figure.img-legenda:hover figcaption{
-    opacity: 1;
-    cursor: pointer;
-}
-nav#Menu{
-display: block;
-}
-nav#Menu ul {
-list-style: none;
-text-transform: uppercase;
-position: absolute;
-top: -10px;
-left: 700px;
-}
-nav#Menu li{
-    display: inline-block;
-    background-color: #dddddd;
-    padding: 10px;
-    margin: 2px;
-    transition:  background-color 1s;
-}
-nav#Menu li:hover{
-        background-color: #606060 ;
-}
-nav#Menu h1{
-    display: none;
-}
-nav#Menu a{
-    color: black;
-    text-decoration: none;
-}
-nav#Menu a:hover{
-    color: white;
-}
+        margin: 2px;
+        transition:  background-color 1s;
+    }
+    nav#Menu li:hover{
+            background-color: #606060 ;
+    }
+    nav#Menu h1{
+        display: none;
+    }
+    nav#Menu a{
+        color: black;
+        text-decoration: none;
+    }
+    nav#Menu a:hover{
+        color: white;
+    }
