--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 
+.emblema-one-regular {
+    font-family: "Emblema One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 
 
+
+
+
+:root{
+    --Fonte-principal : 'Bubblegum Sans'
+   
+}
 body{
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -22,11 +35,30 @@ body{
     
     position: absolute;
     left: 960px;
-    top: 50px;
+    top: 70px;
     
     }
     header#cabecalho{
-    
+    border-bottom:1px  #606060 solid;
+    height: 150px;
+    background: url(-img/Google_Glass-Logo.wine\ \(3\).png) no-repeat  0px 50px ;
+    }
+    header#cabecalho h1 {
+      font-family:var(--Fonte-principal) ;
+        font-size: 35px;
+        color: #606060;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.664);
+padding: 0px;
+margin-bottom: 0px;
+    }
+        
+    header#cabecalho h2{
+        font-family: "Emblema One", system-ui;
+        font-size: 25px;
+        color: #726e6e;
+        text-shadow: 1px 1px 1px rgba(128, 128, 128, 0.486);
+padding: 0px;
+margin-top: 6px;
     }
     
     figure.img-legenda{
