--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
    /* fontes */
 }
 body{
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     background-image:url(-img/79ec0efae164833b0ed42d7132aef46e-spring-sunglasses-icon.webp);
@@ -38,11 +39,24 @@ body{
     p{
         text-align: justify;
     
+    
     }
+    a{
+        text-decoration: none;
+        color: #272727;
+    }
+    a:hover{
+        text-decoration: underline;
+        
+    }
+
+
+
+
     header#cabecalho img#icone{
     
     position: absolute;
-    left: 960px;
+    left: 1250px;
     top: 70px;
     
     }
@@ -128,8 +142,10 @@ margin-top: 6px;
     }
     nav#Menu a:hover{
         color: white;
+        text-decoration: underline;
     }
 
+ 
 /* nav */
 
 table#tabela{
@@ -195,21 +211,49 @@ header#cabecalho-artg h1{
 header#cabecalho-artg h2{
     font-size: 13pt;
     color: #979797;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.377);
 }
 header#cabecalho-artg h3{
     font-size: 12px;
     color: #606060;
 }
 
+.lado-direito{
+    text-align: right;
+}
+
+
+
+
+
+
+
+/* decoração do cabecalho */
 
     aside#lateral{
         display: block;
         width: 350px;
         float: right;
+        background-color: #979797;
+        padding: 10px;
+        margin-top: 5px;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.61);
     }
+aside#lateral h1{
+    font-family: var(--Fonte-principal);
+    font-size: 20pt;
+    color:#000000 ;
+}
+aside#lateral h2{
+
+background-color:#606060;
+font-size: 15pt;
+color: #dddddd;
+padding: 2px;
 
 
+
+}
     footer#rodape{
         clear: both;
 border-top: 1px solid black;
